--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,25 @@
 # Welcome to Jekyll!
 
 # Website settings
-title: "Jalpc"
-description: "Jack's blog,use Jekyll and github pages."
-keywords: "Jack,Jalpc,blog,Jekyll,github,gh-pages"
+title: "Cheng Han, Lin"
+description: "Echo's blog,use Jekyll and github pages."
+keywords: "chlin62,Echo,Cheng Han,blog,Cheng Han, Lin,Jekyll,github,gh-pages"
 
 baseurl: "/"
-url: "http://www.jack003.com"
+url: "http://chlin62.github.io"
 # url: "http://127.0.0.1:4000"
 
 # blog img path
-img_path: 'http://www.jack003.com/static/img/blog'
+img_path: 'http://chlin62.github.io/static/img/blog'
 
 # author
 author:
-  name: 'Jack'
-  first_name: 'Jia'
-  last_name: 'Kun'
-  email: 'me@jack003.com'
-  facebook_username: 'jiakunnj'
-  github_username: 'Jack614'
+  name: 'Echo'
+  first_name: 'Cheng Han'
+  last_name: 'Lin'
+  email: 'chlin62@outlook.com'
+  facebook_username: 'Cheng Han Lin'
+  github_username: 'chlin62'
   head_img: 'static/img/landing/Jack.jpg'
 
 # social link
