--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ author:
   first_name: 'Cheng Han'
   last_name: 'Lin'
   email: 'chlin62@outlook.com'
-  facebook_username: 'Cheng Han Lin'
+  facebook_username: 'chenghan.lin62'
   github_username: 'chlin62'
-  head_img: 'static/img/landing/Jack.jpg'
+  head_img: 'static/img/landing/chlin.jpg'
 
 # social link
 jingyu:
