--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Welcome to Jekyll!
 
 # Website settings
-title: "Cheng Han, Lin"
+title: "林承翰的個人網頁"
 description: "Echo's blog,use Jekyll and github pages."
 keywords: "chlin62,Echo,Cheng Han,blog,Cheng Han, Lin,Jekyll,github,gh-pages"
 
