insert fb share

--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,9 @@ donate:
   wechat: 'static/img/landing/chlin.jpg'
   alipay: 'static/img/landing/chlin.jpg'
 
-
+# share
+bshare:
+  uuid: 513f778e-a8f7-4c20-9ec2-d29cc2328d75
 
 # baidu analytics
 ba:
